--- a/src/main/webapp/resources/css/loader.css
+++ b/src/main/webapp/resources/css/loader.css
@@ -1,6 +1,6 @@
 span[class*="l-"] {
 	height: 10px; width: 10px;
-	background: #ec268f;
+	background: #ed3f3c;
 	display: inline-block;
 	margin: 12px 2px;
 	
