--- a/src/main/webapp/resources/newpos/css/saleslogin.css
+++ b/src/main/webapp/resources/newpos/css/saleslogin.css
@@ -164,6 +164,24 @@ body {
 	100%{opacity: 0;}
 }
 
+
+
+
+   .wellnew {width: 25% !important; display:none; margin:0; min-height: 20px; padding: 19px 29px 19px 19px;
+    margin-bottom: 20px; background-color: #FFF !important; background:#FFF !important;}
+    .mob_no{font-family: arial; font-size: 20px; color: #333; text-align: center; margin: 0 0 15px 0;}
+    .frm_bx{display: block; width: 100%;}
+    .frm_one{width: 100%;}
+    .input_one{width: 100%; padding: 10px 0; text-indent: 10px; margin: 0 0 15px 0; font-size: 14px; color: #333;}
+    .sub_btn{background: #8d2117; border: 0; font-size: 14px; text-transform: uppercase; color: #FFF; cursor: pointer;
+    padding: 9px 22px; outline: none;}
+    .sub_btn:hover{background: #a72c20; color: #FFF;}
+    .close_btn{position: absolute; right: 13px; top: 5px; cursor:pointer;}
+
+    @media screen and (max-width:568px){
+      .wellnew{width: 90% !important;}
+    }
+
 /*Modal CSS*/
 
 .modal-window {
@@ -223,3 +241,8 @@ a {
 }
 
 }
+
+
+
+
+
